--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,31 @@
-{{page-title "Rarwes"}}
-
-{{!-- The following component displays Ember's default welcome message. --}}
-<WelcomePage />
-{{!-- Feel free to remove this! --}}
-
-{{outlet}}
+{{page-title 'Rock & Roll with Ember Octane'}}
+<div class='bg-blue-900 text-gray-100 p-8 h-screen'>
+  <div class='mx-auto mb-4'>
+    <div class='h-12 flex items-center mb-4 border-b-2'>
+      <a href='#'>
+        <h1 class='font-bold text-2xl'>
+          Rock &amp; Roll
+          <span class='font-normal'>
+            with Octane
+          </span>
+        </h1>
+      </a>
+    </div>
+    <ul>
+      {{#each
+        (array
+          (hash title='Black Dog' band='Led Zeppelin' rating=3)
+          (hash title='Yellow Ledbetter' band='Pearl Jam' rating=4)
+          (hash title='The Pretender' band='Foo Fighters' rating=2)
+        ) as |song|
+      }}
+        <li class='leading-loose'>
+          {{song.title}} by {{song.band}}
+          <span class='float-right'>
+            {{song.rating}}
+          </span>
+        </li>
+      {{/each}}
+    </ul>
+  </div>
+</div>
