--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -11,21 +11,10 @@
         </h1>
       </a>
     </div>
-    <ul>
-      {{#each
-        (array
-          (hash title='Black Dog' band='Led Zeppelin' rating=3)
-          (hash title='Yellow Ledbetter' band='Pearl Jam' rating=4)
-          (hash title='The Pretender' band='Foo Fighters' rating=2)
-        ) as |song|
-      }}
-        <li class='leading-loose'>
-          {{song.title}} by {{song.band}}
-          <span class='float-right'>
-            {{song.rating}}
-          </span>
-        </li>
-      {{/each}}
-    </ul>
+    <nav class="h-8 flex item-center mb-8">
+        <LinkTo class="hover:text-grey-500" @route="bands">Bands</LinkTo>
+        <LinkTo class="hover:text-grey-500 ml-4" @route="songs">Songs</LinkTo>
+    </nav>
+    {{outlet}}
   </div>
 </div>
