--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -11,10 +11,8 @@
         </h1>
       </a>
     </div>
-    <nav class="h-8 flex item-center mb-8">
-        <LinkTo class="hover:text-grey-500" @route="bands">Bands</LinkTo>
-        <LinkTo class="hover:text-grey-500 ml-4" @route="songs">Songs</LinkTo>
-    </nav>
-    {{outlet}}
+    <div class="flex flex-wrap -mx-2">
+        {{outlet}}
+    </div>
   </div>
 </div>
